--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "express": "^4.21.2",
+    "path-browserify": "^1.0.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
